ecmascript/parser/tests/test262-error-references/fail/cbb2fa2e2d167a54.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/cbb2fa2e2d167a54.js:1:20
  |
1 | function f() { new.anythingElse; }
  |                    ^^^^^^^^^^^^

